[更新]ISSUEテンプレート
運用方針の変更に合わせてISSUEテンプレートを修正

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -7,7 +7,15 @@ assignees: PGUMA
 
 ---
 
-# 目的
+## 目的
+
+- 〜を〜する
+
+## 読書メモ
+
+[zenn](https://zenn.dev/)
+
+## 本について
 
 ![image](https://example.com)
 
